--- a/HelloWatch WatchKit App/Base.lproj/Interface.storyboard
+++ b/HelloWatch WatchKit App/Base.lproj/Interface.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="7701"/>
@@ -11,14 +11,18 @@
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController">
                     <items>
                         <label width="131.5" alignment="left" text="Label" textAlignment="center" id="XjH-Qc-tYe">
-                            <fontDescription key="font" type="system" weight="black" pointSize="13"/>
+                            <fontDescription key="font" type="system" weight="black" pointSize="15"/>
                         </label>
-                        <button width="1" alignment="left" title="Up" id="Myl-vN-pfK">
+                        <button width="1" alignment="left" title="+" id="Myl-vN-pfK">
+                            <color key="backgroundColor" red="0.17626032079378473" green="0.16706428987024591" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="font" type="system" pointSize="25"/>
                             <connections>
                                 <action selector="upButton" destination="AgC-eL-Hgc" id="v0o-x5-uWP"/>
                             </connections>
                         </button>
-                        <button width="1" alignment="left" title="Down" id="eTN-ct-Uqf">
+                        <button width="1" alignment="left" title="-" id="eTN-ct-Uqf">
+                            <color key="backgroundColor" red="1" green="0.052313566417641844" blue="0.0058835916257198306" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="font" type="system" pointSize="25"/>
                             <connections>
                                 <action selector="downButton" destination="AgC-eL-Hgc" id="lKh-jI-asT"/>
                             </connections>
